# Genesis

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
definitions/halo2amp_mcc/: _meta.json
definitions/halo3_mcc/: _meta.json
definitions/halo3odst_mcc/: _meta.json
definitions/halo4_mcc/: _meta.json
definitions/haloreach_mcc/: _meta.json
dump/: frag_grenade_saved_Genesis.model  frag_grenade_saved_Guerilla.model
guerilla_tag_save/: README.md  backend-writer.md  backport-checklist.md  function-map.md  raw-evidence.md  sapien-update-notes.md  save-flow.md
src/: app.rs  format.rs  main.rs  source.rs
src/app/: browser.rs  controller.rs  editor.rs  export.rs  foundation.rs  function_editor.rs  map_names.rs  material.rs  model_preview.rs  prefs.rs  shader.rs  state.rs  style.rs  ui.rs
