# Standalone repo: its own workspace root so it doesn't get absorbed into a
# parent workspace. The blam-tags engine is referenced through the Git submodule
# at ./blam-tags.
[workspace]

[package]
name = "genesis"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "Genesis"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blam-tags = { path = "blam-tags/blam-tags" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25", default-features = false, features = ["ico"] }
rfd = "0.15"
serde_json = "1"
walkdir = "2"
